# ComfyUI-aiugc

./: __init__.py  prestartup_script.py  pyproject copy.toml  pyproject.toml
comfy-nodes/: external_host_aiugc.py  external_image_aiugc.py
web-plugin/: index.js
web/next-gen/: next-gen.config.json
